Small corrections FBAUL projects

--- a/project2.html
+++ b/project2.html
@@ -125,7 +125,7 @@
                 </figure>
 
                 <figure>
-                    <img src="assets/fbaul-mapantonio.png" alt="affinity map (says, thinks, does and feels) of our persona antonio">
+                    <img src="assets/img/fbaul-mapantonio.png" alt="affinity map (says, thinks, does and feels) of our persona antonio">
                     <figcaption>Fig. #5 - Affinity map of Antonio, who wishes reconnect with fbaul's community.</figcaption>
                 </figure>
 
