--- a/index.html
+++ b/index.html
@@ -8,15 +8,32 @@
 <title>Erika Maessaka</title>
 <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
-<link rel="stylesheet" href="harrystyles.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=LexendDeca:200,400,600">
+<link rel="stylesheet" href="homepage.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Unbounded:200,400,600">
 
 </head>
 
+
 <body>
 
+    <div class="title">
+        <h1>Erika Maessaka</h1>
+        <h2>UX / UI Designer</h2>
+    </div>
 
+    <figure>
+        <img src="assets/img/bob.gif" alt="animated gif of bob the builder hitting a nail with a hammer">
+        <figcaption>Sorry, under construction!</figcaption>
+    </figure>
 
+    <div class="links">
+        <p>Meanwhile, why don't you...</p>
+        <a href="https://www.behance.net/erikasm">view my portfolio?</a>
+        <a href="https://www.linkedin.com/in/erikamaessaka/">add me on linkedin?</a>
+        <a href="assets/pdf/maessakaerika_cv.pdf">download my cv?</a>
+        <a href="mailto:maessakaerika@gmail.com">say hello?</a>
+    </div>
 
 </body>
+
 </html>
